# gen-ai-sdk-cookbook

./: .gitignore  README.md
deep-research/: .env.example  01_deep_research_pipeline.py  02_deep_research_google_drive_pipeline.py  03_hybrid_deep_research_pipeline.py  README.md  pyproject.toml
gen-ai/: README.md
gen-ai/examples/a2ui/: index.html  package-lock.json
gen-ai/examples/custom_component/: .env  README.md  custom_component.py  pyproject.toml
gen-ai/examples/data_store/: .env.example  README.md  indexing.py  metadata_filter.py  pyproject.toml
gen-ai/examples/deep_researcher/: .env.example  01_b_deep_research_quickstart_google.py  01_c_deep_research_quickstart_perplexity.py  01_d_deep_research_quickstart_parallel.py  01_deep_research_quickstart.py  01_e_deep_research_quickstart_glodr.py  02_deep_research_custom_prompt.py  03_deep_research_pipeline.py  04_deep_research_google_drive_pipeline.py  README.md  pyproject.toml
gen-ai/examples/e2e_rag_pipeline/007_multimodal_input_handling/: README.md  pipeline.py  pyproject.toml
gen-ai/examples/evaluations/agent_evaluation_integration_style/: conftest.py  load_dataset.py  main.py  pyproject.toml  sample_dataset_v2.json
gen-ai/examples/evaluations/create_custom_evaluator_scorer/: .env.example  Makefile  README.md  custom_evaluator.py  extend_evaluator.py  pyproject.toml
gen-ai/examples/evaluations/create_custom_evaluator_scorer/dataset_examples/: simple_rag_data.csv
gen-ai/examples/evaluations/custom_evaluator_scorer_tutorial/: .env.example  Makefile  README.md  custom_detail_case_gangguan_correctness_evaluator.py  custom_detail_case_gangguan_correctness_metric.py  evaluation_steps.py  final_results_detail_case_gangguan_correctness.csv  main.py  pyproject.toml  pyrightconfig.json  tsel_test_data.csv
gen-ai/examples/lm_request_processor/lm_request_processor_structured_output/: README.md  pyproject.toml  with_json_output_parser.py  with_response_schema.py
gen-ai/examples/lm_request_processor/lm_request_processor_tool_calling/: README.md  pyproject.toml  tool_calling.py
gen-ai/examples/realtime_session/: 01_realtime_session_text_only.py  02_realtime_session_text_and_audio.py  03_realtime_session_with_tool_calling.py  04_realtime_session_integration.py  README.md  pyproject.toml
gen-ai/tutorials/lm_invoker/: 001_quickstart.py  README.md
gl-aip/: README.md
gl-aip/examples/agent-export-import/: README.md  main.py  pyproject.toml
gl-aip/examples/bosa-mcp/: .env.example  README.md  example_all_setup.py  example_interactive.py  main.py  pyproject.toml  utilities.py
gl-aip/examples/bosa-mcp/src/: __init__.py  main.py
gl-aip/examples/class-pattern/: .env.example  README.md  main.py  pyproject.toml
gl-aip/examples/hello-world/: README.md  main.py  pyproject.toml
gl-aip/examples/hello-world-local/: README.md  main.py  main_with_a2a_token_streaming.py  main_with_agent_definition_configs.py  main_with_chat_history.py  main_with_docproc_pdf.py  main_with_gl_connectors_tool.py  main_with_hitl.py  main_with_local_files.py  main_with_mcp.py  main_with_memory.py  main_with_native_tool.py  main_with_pii_toggle.py  main_with_runtime_config.py  main_with_subagents.py  main_with_tool_output_sharing.py  pyproject.toml
gl-aip/examples/hello-world-local/files/: hello_local.txt
gl-aip/examples/hello-world-local/mcps/: __init__.py
gl-aip/examples/hello-world-local/tools/: __init__.py
gl-aip/examples/langflow-execute-agents/: README.md  list_agents.py  main.py  pyproject.toml  run_agent.py
gl-aip/examples/modular-tool-integration/: README.md  main.py  pyproject.toml
gl-aip/examples/multi-agent/: README.md  main.py  pyproject.toml
gl-aip/examples/multi-agent-system-patterns/: Makefile  README.md  pyproject.toml
gl-aip/examples/multi-agent-system-patterns/aggregator/: README.md  main.py
gl-aip/examples/multi-agent-system-patterns/aggregator/tools/: mock_calendar_tool.py  mock_time_tool.py  mock_weather_tool.py
gl-aip/examples/multi-agent-system-patterns/hierarchical/: README.md  main.py
gl-aip/examples/multi-agent-system-patterns/loop/: README.md  main.py
gl-aip/examples/multi-agent-system-patterns/parallel/: README.md  main.py
gl-aip/examples/multi-agent-system-patterns/router/: README.md  main.py
gl-aip/examples/multi-agent-system-patterns/sequential/: README.md  main.py
gl-aip/examples/multi-agent/agents/: __init__.py  casual_greeter.py  formal_greeter.py  greeting_coordinator.py
gl-aip/examples/multi-agent/hierarchical/: README.md
gl-aip/examples/multi-agent/tools/: __init__.py  farewell.py  greeting.py
gl-aip/examples/programmatic-tool-calling/: .env.example  README.md  compare_runs_budget.py  main_basic.py  main_with_mcp.py  main_with_ptc.py  main_without_ptc.py  pyproject.toml
gl-aip/examples/programmatic-tool-calling/tools/: __init__.py  get_budget_by_level_tool.py  get_expenses_tool.py  get_orders_tool.py  get_team_members_tool.py  get_user_tool.py
gl-aip/examples/programmatic-tool-calling/tools_budget/: __init__.py
gl-aip/examples/qna_evaluations/: .env.example  .gitignore  Makefile  README.md  benchmark.py  input.csv  original_good.csv  pyproject.toml  readme.md  test_fix.csv  test_fix2.csv
gl-aip/examples/qna_evaluations/components/: __init__.py  config.py  utils.py
gl-aip/examples/qna_evaluations/components/capture/: __init__.py  async_processor.py  renderer.py
gl-aip/examples/qna_evaluations/components/data/: __init__.py  converters.py  csv_reader.py  csv_writer.py  inference_converter.py
gl-aip/examples/qna_evaluations/components/evaluation/: __init__.py  artifact_metric.py  evaluator.py  wrappers.py
gl-aip/examples/runtime-config/: .env.example  README.md  main.py  pyproject.toml
gl-aip/examples/runtime-config/agents/: __init__.py  research_agent.py
gl-aip/examples/runtime-config/mcps/: __init__.py
gl-aip/examples/runtime-config/tools/: __init__.py  research_formatter.py
gl-aip/examples/single-agent/: README.md  main.py  pyproject.toml
glaip/examples/agent-export-import/: README.md
glaip/examples/hello-world/: README.md  pyproject.toml
(+179 files in other folders)
