[project]
name = "deep-research"
version = "0.1.0"
description = "Deep research usage examples"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "gllm-core>=0.3.34,<0.4.0",
    "gllm-inference[openai]>=0.5.136,<0.6.0",
    "gllm-generation[openai]>=0.5.30,<0.6.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "gllm-pipeline>=0.4.32,<0.5.0",
    "semantic-router>=0.1.12",
    "azure-core>=1.38.0",
    "azure-search-documents>=11.4.0,<12.0.0",
    "gllm-datastore[chroma]>=0.5.21,<0.6.0",
]

[[tool.uv.index]]
name = "gen-ai-internal"
url = "https://glsdk.gdplabs.id/gen-ai-internal/simple/"

[tool.uv.sources]
gllm-core = { index = "gen-ai-internal" }
gllm-inference = { index = "gen-ai-internal" }
gllm-generation = { index = "gen-ai-internal" }
gllm-pipeline = { index = "gen-ai-internal" }
