[project]
name = "data-store"
version = "0.0.0"
description = "Data store usage example"
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "gllm-core>=0.3.0,<0.4.0",
]

[[tool.uv.index]]
name = "gen-ai-internal"
url = "https://glsdk.gdplabs.id/gen-ai-internal/simple/"

[tool.uv.sources]
gllm-core = { index = "gen-ai-internal" }
