[tool.poetry]
name = "glaip-agent-benchmark"
version = "1.0.0"
description = "Comprehensive Agent Benchmark Evaluation System for GLAIP SDK"
authors = ["GDP Labs <tech@gdplabs.id>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
glaip-sdk = ">=0.0.9"
agentevals = ">=0.0.1"
gllm-evals = {version = ">=0.0.40", extras = ["deepeval", "langchain", "ragas"]}
openai = ">=1.0.0"
pandas = ">=2.0.0"
rich = ">=13.0.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"

[[tool.poetry.source]]
name = "gen-ai-internal"
url = "https://asia-southeast2-python.pkg.dev/gdp-labs/gen-ai-internal/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
