[project]
name = "multimodal-input-handling"
version = "0.0.0"
description = "Multimodal input handling example"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "gllm-core>=0.3.0,<0.4.0",
    "gllm-inference[openai]>=0.5.38,<0.6.0",
    "gllm-datastore[chroma]>=0.5.0,<0.6.0",
    "gllm-retrieval[sql]>=0.5.0,<0.6.0",
    "gllm-generation>=0.5.0,<0.6.0",
    "gllm-pipeline>=0.4.0,<0.5.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[[tool.uv.index]]
name = "gen-ai-internal"
url = "https://glsdk.gdplabs.id/gen-ai-internal/simple/"

[tool.uv.sources]
gllm-core = { index = "gen-ai-internal" }
gllm-inference = { index = "gen-ai-internal" }
gllm-datastore = { index = "gen-ai-internal" }
gllm-retrieval = { index = "gen-ai-internal" }
gllm-generation = { index = "gen-ai-internal" }
gllm-pipeline = { index = "gen-ai-internal" }
