[project]
name = "agent-evaluation-integration-style"
version = "0.1.0"
description = "Agent evaluation with custom SQL assertion evaluator using LLM-as-a-Judge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "gllm-evals[deepeval,langchain,ragas]>=0.0.43",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
python_files = ["main.py"]
asyncio_mode = "auto"

[[tool.uv.index]]
name = "gen-ai-internal"
url = "https://glsdk.gdplabs.id/gen-ai-internal/simple/"

[tool.uv.sources]
gllm-evals = { index = "gen-ai-internal" }
