[project]
name = "lm-request-processor-structured-output"
version = "0.0.0"
description = "LM Request Processor structured output example"
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "gllm-inference[openai]>=0.5.0,<0.6.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[[tool.uv.index]]
name = "gen-ai-internal"
url = "https://glsdk.gdplabs.id/gen-ai-internal/simple/"

[tool.uv.sources]
gllm-inference = { index = "gen-ai-internal" }
